# modbus_scanner

./: CMakeLists.txt  LICENSE  README.md  ascii_scanner.h  crc_check.cpp  crc_check.h  defs.h  endians.h  hex_utils.cpp  hex_utils.h  master_tcp_scanner.h  mb_functions.txt  mb_scanner.docx  mb_scanner_test.cpp  modbus_scanner.cpp  modbus_scanner.h  scanner.cpp  scanner.h  slave_rtu_old.cpp  slave_rtu_old.h  slave_rtu_scanner.cpp  slave_rtu_scanner.h  slave_tcp_scanner.cpp  slave_tcp_scanner.h  speed_test.cpp  test_scanner.cpp
.github/workflows/: modbus_scanner.yaml
rtu_server/: rtu_server.cpp  rtu_server_data_handler.cpp  rtu_server_data_handler.h
tcp_server/: server_connection.cpp  server_connection.h  tcp_server.cpp
